syntax = "proto3";

package saga;

option go_package = "/proto_gen";

import "google/protobuf/empty.proto";

service SagaService {
  rpc StartSaga(StartSagaRequest) returns (google.protobuf.Empty);
}

message StartSagaRequest {
  int64 message_id = 1;
  int64 chat_id = 2;
  string text = 3;
  repeated string emails = 4;
}